--- a/ClusteringCrypto/crypto_clustering.ipynb
+++ b/ClusteringCrypto/crypto_clustering.ipynb
@@ -21,7 +21,9 @@
     "import plotly.express as px\n",
     "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
     "from sklearn.decomposition import PCA\n",
-    "from sklearn.cluster import KMeans\n"
+    "from sklearn.cluster import KMeans\n",
+    "\n",
+    "# Push test"
    ]
   },
   {
@@ -334,9 +336,9 @@
  "metadata": {
   "file_extension": ".py",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "conda_python3",
    "language": "python",
-   "name": "python3"
+   "name": "conda_python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -348,7 +350,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.13"
   },
   "mimetype": "text/x-python",
   "name": "python",
